<!--
  ~ Copyright 2016 Epishie
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Tabs for Reddit</string>

    <string name="lbl_subreddits">Subreddits</string>
    <string name="lbl_default_subreddits">Default</string>
    <string name="lbl_post_by_line">%1$s \u2022 %2$d comments \u2022 %3$s ago</string>
    <string name="lbl_post_score_line">%1$s points</string>
    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_sort">Sort</string>
    <string name="lbl_hot">Hot</string>
    <string name="lbl_new">New</string>
    <string name="lbl_rising">Rising</string>
    <string name="lbl_controversial">Controversial</string>
    <string name="lbl_top">Top</string>
    <string name="lbl_sidebar">Sidebar</string>

    <string name="des_drawer_open">Drawer open</string>
    <string name="des_drawer_close">Drawer close</string>
    <string name="des_divider">Divider</string>
</resources>
