<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Epishie
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:title="@string/lbl_refresh"
        android:icon="@drawable/ic_refresh_light_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort"
        android:title="@string/lbl_sort"
        android:icon="@drawable/ic_sort_light_24dp"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@id/sort">
                <item
                    android:id="@+id/sort_hot"
                    android:title="@string/lbl_hot" />
                <item
                    android:id="@+id/sort_new"
                    android:title="@string/lbl_new" />
                <item
                    android:id="@+id/sort_rising"
                    android:title="@string/lbl_rising" />
                <item
                    android:id="@+id/sort_controversial"
                    android:title="@string/lbl_controversial" />
                <item
                    android:id="@+id/sort_top"
                    android:title="@string/lbl_top" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/sidebar"
        android:title="@string/lbl_sidebar"
        android:icon="@drawable/ic_chrome_reader_mode_light_24dp"
        app:showAsAction="always" />
</menu>